# pasta-msm

./: Cargo.toml  benchmark_cmp_zeros.md  benchmark_compressed.md  benchmarks_zeros_ones.md  build.rs  cmp_zeros.json  compressed.json  data.json  preallocated_random_ones.json  random_ones.json  with_compressed.json  zeros_and_ones.json
.github/workflows/: repo-sync.yml
benches/: data.md  main.rs  msm.rs  spmvm.rs
cuda/: pallas.cu  vesta.cu
examples/: abomonated_msm.rs  abomonated_spmvm.rs  data.txt  msm.rs  spmvm.rs  spmvm_pallas.rs  spmvm_vesta.rs
src/: lib.rs  spmvm.rs  utils.rs
src/spmvm/: mod.rs  pallas.rs  vesta.rs
stats/: 1.txt  13.txt  17.txt  2.txt  22.txt  26.txt  30.txt  5.txt  6.txt  9.txt
stats/rc=1/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
stats/rc=900/: 0.txt  1.txt  10.txt  11.txt  12.txt  14.txt  15.txt  16.txt  18.txt  19.txt  2.txt  20.txt  21.txt  23.txt  24.txt  25.txt  27.txt  28.txt  29.txt  3.txt  31.txt  4.txt  7.txt  8.txt
subset_stats/rc=1/: 11  15  19  23  27  3  31  7
