[package]
name = "pasta-msm"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Optimized multiscalar multiplicaton for Pasta moduli for x86_64 and aarch64"
repository = "https://github.com/supranational/pasta-msm"
readme = "README.md"
include = [
    "/benches/**",
    "/cuda/**",
    "/src/**",
    "/Cargo.toml",
    "/build.rs",
    "/README.md",
]

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = ["semolina/portable"]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = ["semolina/force-adx"]
cuda-mobile = []

[dependencies]
semolina = "~0.1.3"
sppark = { git = "https://github.com/lurk-lab/sppark.git", branch = "pushing-the-limit" }
pasta_curves = { git = "https://github.com/lurk-lab/pasta_curves", branch = "dev", version = ">=0.3.1, <=0.5", features = ["repr-c"] }
paste = "1.0.14"
rayon = "1.5"
abomonation = "0.7.3"
abomonation_derive = { version = "0.1.0", package = "abomonation_derive_ng" }
home = "0.5.5"
num = "0.4.1"
rand = "^0"
rand_chacha = "^0"
plotters = "0.3.5"

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "spmvm"
harness = false
